# ApEx1Part2

./: CMakeLists.txt  CanberraDistance.cpp  ChebyshevDistance .cpp  EuclideanDistance.cpp  Header.h  Main.cpp  ManhattanDistance.cpp  MinkowskiDistance.cpp  OutputFunctions.cpp  README.md  Validation.cpp
